<resources>
    <string name="app_name">Dialer</string>
    <string name="dial_activity">This is the Dial activity.</string>
    <string name="call_list_activity">This is the Call List activity.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Main activity strings -->
    <string name="main_activity_question">What would you like to do?</string>

    <!-- Main activity button strings -->
    <string name="dial_button">Dial</string>
    <string name="call_list_button">Call List</string>
    <string name="settings_button">Settings</string>
    <string name="map_button">Map</string>
    <string name="about_button">About</string>

    <!-- Dialarea text -->
    <string name="dial_area_text">%s</string>
    <!-- Alert dialog about text -->
    <string name="alert_dialog_info">
        This app is supposed to mimic the keypad on a phone. The app consists of activities to:\n\n
    &#8226; Enter numbers to dial\n
    &#8226; See previously dialed numbers\n
    &#8226; Change the keypad settings\n
    &#8226; Show on a map where previous calls are dialed from
    </string>
    <!-- Permission dialog text -->
    <string name="permission_dialog_info">By granting the permission to make and manage phone calls,
        your calls will be started immediately. If you deny the permission, you will have to explicitly
    initiate the call.</string>
    <!-- Store title -->
    <string name="store_number_header">Store numbers</string>

    <!-- Shared preference title for call list -->
    <string name="saved_number_list_key">Stored numbers</string>

    <string name="store_number_key">Save number</string>

    <!-- Shared preference for current voice -->
    <string name="current_voice">Current voice</string>
    <string name="default_voice">mamacita_us</string>

    <!-- Store summary -->
    <string name="store_number_summary">Dialed telephone numbers are stored so they can be viewed later.</string>

    <!-- Delete title -->
    <string name="delete_number_header">Delete stored numbers</string>

    <!-- Delete summary -->
    <string name="delete_number_summary">Delete stored telephone numbers from storage</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dial">Dial</string>
    <string name="remove">Remove</string>
    <string name="no_numbers_stored">No numbers are stored.</string>

    <!-- Download activity  -->
    <string name="activity_download_name">Download voices</string>
    <string name="download_source">Download source</string>
    <string name="download_url">https://dt031g.programvaruteknik.nu/dialer/voices/</string>
    <string name="store_file_path">/files/voices/</string>
    <string name="voice">Voice</string>
    <string name="downloading_file">Downloading %s</string>
    <string name="current_progress">%d%s</string>


    <!-- Snackbar message -->
    <string name="already_downloaded">This file has already been downloaded.</string>
    <string name="error_downloading">Error while downloading %s</string>
</resources>